deploy: ba28d8613560b076920799c470965778f4bc64d0

--- a/ch01-02-hello-world.html
+++ b/ch01-02-hello-world.html
@@ -245,7 +245,7 @@ main.exe
 main.pdb
 main.rs
 </code></pre>
-<p>這顯示了副檔名爲 <em>.rs</em>  的原始程式碼檔案、執行檔（在 Winddows 上爲 <em>main.exe</em>；其他則爲 <em>main</em>），然後在 Windows 上會再出現一個副檔名爲 <em>.pdb</em> 的除錯資訊文件。在這裡，你就可以像這樣執行 <em>main</em> 或 <em>main.exe</em> 檔案：</p>
+<p>這顯示了副檔名爲 <em>.rs</em>  的原始碼檔案、執行檔（在 Winddows 上爲 <em>main.exe</em>；其他則爲 <em>main</em>），然後在 Windows 上會再出現一個副檔名爲 <em>.pdb</em> 的除錯資訊文件。在這裡，你就可以像這樣執行 <em>main</em> 或 <em>main.exe</em> 檔案：</p>
 <pre><code class="language-console">$ ./main # or .\main.exe on Windows
 </code></pre>
 <p>如果 <em>main.rs</em> 正是你的 “Hello, world!” 程式，這命令就會顯示 <code>Hello, world!</code> 到你的終端機。</p>
