--- a/ch14-02-publishing-to-crates-io.html
+++ b/ch14-02-publishing-to-crates-io.html
@@ -168,7 +168,7 @@
                 <div id="content" class="content">
                     <main>
                         <h2><a class="header" href="#發佈-crate-到-cratesio" id="發佈-crate-到-cratesio">發佈 Crate 到 Crates.io</a></h2>
-<p>我們已經使用過 <a href="https://crates.io/">crates.io</a><!-- ignore --> 的套件來作爲我們專案的依賴函式庫，但是你也可以發佈你自己的套件來將你的程式碼提供給其他人使用。<a href="https://crates.io/">crates.io</a><!-- ignore --> 會發行套件的原始程式碼，所以它主要用來託管開源程式碼。</p>
+<p>我們已經使用過 <a href="https://crates.io/">crates.io</a><!-- ignore --> 的套件來作爲我們專案的依賴函式庫，但是你也可以發佈你自己的套件來將你的程式碼提供給其他人使用。<a href="https://crates.io/">crates.io</a><!-- ignore --> 會發行套件的原始碼，所以它主要用來託管開源程式碼。</p>
 <p>Rust 與 Cargo 有許多功能可以幫助其他人更容易找到並使用你發佈的套件。我們會介紹其中一些功能並解釋如何發佈套件。</p>
 <h3><a class="header" href="#寫上有幫助的技術文件註解" id="寫上有幫助的技術文件註解">寫上有幫助的技術文件註解</a></h3>
 <p>準確地加上套件的技術文件有助於其他使用者知道如何及何時使用它們，所以投資時間在寫技術文件上是值得的。在第三章我們提過如何使用兩條斜線 <code>//</code> 來加上 Rust 程式碼註解。Rust 還有個特別的註解用來作爲技術文件，俗稱爲<em>技術文件註解（documentation comment）</em>，這能用來產生 HTML 技術文件。這些 HTML 顯示公開 API 項目中技術文件註解的內容，讓對此函式庫有興趣的開發者知道如何<em>使用</em>你的 crate，而不需知道 crate 是如何<em>實作</em>的。</p>
