--- a/ch01-03-hello-cargo.html
+++ b/ch01-03-hello-cargo.html
@@ -226,7 +226,7 @@ Hello, world!
      Running `target/debug/hello_cargo`
 Hello, world!
 </code></pre>
-<p>請注意到這次輸出的結果我們沒有看到 Cargo 有在編譯 <code>hello_cargo</code> 的跡象，這是因爲 Cargo 可以知道檔案完全沒被更改過，所以它選擇直接執行二進制檔案。如果你有變更你的原始程式碼的話，Cargo 才會在執行前重新建構專案，你才會看到這樣的輸出結果：</p>
+<p>請注意到這次輸出的結果我們沒有看到 Cargo 有在編譯 <code>hello_cargo</code> 的跡象，這是因爲 Cargo 可以知道檔案完全沒被更改過，所以它選擇直接執行二進制檔案。如果你有變更你的原始碼的話，Cargo 才會在執行前重新建構專案，你才會看到這樣的輸出結果：</p>
 <pre><code class="language-console">$ cargo run
    Compiling hello_cargo v0.1.0 (file:///projects/hello_cargo)
     Finished dev [unoptimized + debuginfo] target(s) in 0.33 secs
