--- a/print.html
+++ b/print.html
@@ -169,44 +169,30 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#the-rust-programming-language" id="the-rust-programming-language">The Rust Programming Language</a></h1>
-<p><em>by Steve Klabnik and Carol Nichols, with contributions from the Rust Community</em></p>
-<p>This version of the text assumes you’re using Rust 1.41.0 or later with
-<code>edition=&quot;2018&quot;</code> in <em>Cargo.toml</em> of all projects to use Rust 2018 Edition
-idioms. See the <a href="ch01-01-installation.html">“Installation” section of Chapter 1</a><!-- ignore -->
-to install or update Rust, and see the new <a href="appendix-05-editions.html">Appendix E</a><!-- ignore
---> for information on editions.</p>
-<p>The 2018 Edition of the Rust language includes a number of improvements that
-make Rust more ergonomic and easier to learn. This iteration of the book
-contains a number of changes to reflect those improvements:</p>
+                        <h1><a class="header" href="#rust-程式設計語言" id="rust-程式設計語言">Rust 程式設計語言</a></h1>
+<p><em>Steve Klabnik 與 Carol Nichols，以及 Rust 社群的貢獻</em></p>
+<p>此版本預設你使用 Rust 1.41.0 或更高的版本，並在所有專案中的 <em>Cargo.toml</em> 都有 <code>edition=&quot;2018&quot;</code> 來使用 Rust 2018 版號。請查看<a href="ch01-01-installation.html">第一章的「安裝」段落</a><!-- ignore -->來安裝或更新 Rust，並查看<a href="appendix-05-editions.html">附錄 E</a><!-- ignore -->來瞭解版號的資訊。</p>
+<p>Rust 語言的 2018 版號包含一系列的改進使 Rust 更加易讀易用且更容易學習。本書此次的疊代包含一些更新來反映這些改進：</p>
 <ul>
-<li>Chapter 7, “Managing Growing Projects with Packages, Crates, and Modules,”
-has been mostly rewritten. The module system and the way paths work in the
-2018 Edition were made more consistent.</li>
-<li>Chapter 10 has new sections titled “特徵作爲參數” and “Returning
-Types that Implement Traits” that explain the new <code>impl Trait</code> syntax.</li>
-<li>Chapter 11 has a new section titled “Using <code>Result&lt;T, E&gt;</code> in Tests” that
-shows how to write tests that use the <code>?</code> operator.</li>
-<li>The “Advanced Lifetimes” section in Chapter 19 was removed because compiler
-improvements have made the constructs in that section even rarer.</li>
-<li>The previous Appendix D, “Macros,” has been expanded to include procedural
-macros and was moved to the “Macros” section in Chapter 19.</li>
-<li>Appendix A, “Keywords,” also explains the new raw identifiers feature that
-enables code written in the 2015 Edition and the 2018 Edition to interoperate.</li>
-<li>Appendix D is now titled “Useful Development Tools” and covers recently
-released tools that help you write Rust code.</li>
-<li>We fixed a number of small errors and imprecise wording throughout the book.
-Thank you to the readers who reported them!</li>
+<li>第七章「透過套件、Crate與模組管理成長中的專案」幾乎重寫了一遍。模組系統以及其在 2018 版號中的路徑處理變得更一致。</li>
+<li>第十章新增了「特徵作爲參數」與「返回有實作特徵的型別」的段落來解釋新的 <code>impl Trait</code> 語法。</li>
+<li>第十一章有個新段落「在測試中使用 <code>Result&lt;T, E&gt;</code>」來展示如何在測試中使用 <code>?</code> 運算子。</li>
+<li>第十九章的「進階生命週期」已被移除，因爲編譯器的改善讓使用該段落的時機變得更加稀少了。</li>
+<li>之前的附錄 D 「巨集」增加了過程式巨集的內容，且被移至第十九章的「巨集」段落中。</li>
+<li>附錄 A 「關鍵字」新增了原始標識符的功能介紹，來讓 2015 版號的程式碼可以用在 2018 版號也不會出現問題。</li>
+<li>附錄 D 現在的標題爲「實用開發工具」並涵蓋最近發佈的工具，這些能在你寫 Rust 程式碼時幫助到你。</li>
+<li>我們修正了整本書中一些小錯誤與不精確的措辭。感謝各位讀者的回報！</li>
 </ul>
-<p>Note that any code in earlier iterations of <em>The Rust Programming Language</em>
-that compiled will continue to compile without <code>edition=&quot;2018&quot;</code> in the
-project’s <em>Cargo.toml</em>, even as you update the Rust compiler version you’re
-using. That’s Rust’s backward compatibility guarantees at work!</p>
-<p>The HTML format is available online at
-<a href="https://doc.rust-lang.org/stable/book/">https://doc.rust-lang.org/stable/book/</a>
-and offline with installations of Rust made with <code>rustup</code>; run <code>rustup docs --book</code> to open.</p>
-<p>This text is available in <a href="https://nostarch.com/rust">paperback and ebook format from No Starch
-Press</a>.</p>
+<p>值得注意的是<em>Rust 程式設計語言</em>的早期疊代版本中的程式碼在專案中的 <em>Cargo.toml</em> 移除 <code>edition=&quot;2018&quot;</code> 就能繼續編譯，儘管你升級了 Rust 編譯器也是如此。Rust 的向下相容保證一切可以正常運行！</p>
+<p>本書的 HTML 格式可以在線上閱讀：<a href="https://doc.rust-lang.org/stable/book/">https://doc.rust-lang.org/stable/book/</a>（<a href="https://rust-lang.tw/book-tw/">正體中文版</a>。而離線版則可以包含在 <code>rustup</code> 安裝的 Rust 中，輸入 <code>rustup docs --book</code> 就能開啟。</p>
+<p>本書也有由<a href="https://nostarch.com/rust">No Starch Press 出版平裝與電子版格式</a>。</p>
+<blockquote>
+<ul>
+<li>translators: [Ngô͘ Io̍k-ūi <a href="mailto:wusyong9104@gmail.com">wusyong9104@gmail.com</a>]</li>
+<li>commit: <a href="https://github.com/rust-lang/book/blob/e5ed97128302d5fa45dbac0e64426bc7649a558c/src/title-page.md">e5ed971</a></li>
+<li>updated: 2020-10-03</li>
+</ul>
+</blockquote>
 <h1><a class="header" href="#foreword" id="foreword">Foreword</a></h1>
 <p>It wasn’t always so clear, but the Rust programming language is fundamentally
 about <em>empowerment</em>: no matter what kind of code you are writing now, Rust
