deploy: 89e7f8149593c5f4c15e0e7735fa89bd742c005d

--- a/foreword.html
+++ b/foreword.html
@@ -167,7 +167,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1><a class="header" href="#前沿" id="前沿">前沿</a></h1>
+                        <h1><a class="header" href="#前言" id="前言">前言</a></h1>
 <p>雖然不是那麼明確，但 Rust 程式設計語言旨在<em>賦予能力（empowerment）</em>：無論你現在寫的是何種程式碼，Rust 能賦予你更多能力，在廣泛的各種領域中走的更遠且更有自信。</p>
 <p>比方說，「系統層級」的工作會需要處理低階的記憶體管理、資料呈現與並行細節。傳統以往來說，這是片神祕的程式設計領域，只有那些投入好幾年的時間學習的人才有辦法駕馭，並懂得避開其惡名昭彰的陷阱。而且就算是十分謹慎的實作者，也生怕他們的程式碼會出現漏洞、崩潰或損壞。</p>
 <p>Rust 破除了這些障礙，消除了以往的陷阱並提供友善全面的工具來協助你。想要「深入」底層控制的程式設計師可以使用 Rust，無需冒著常見的崩潰或安全漏洞風險，也無需學習得經常改變的工具鏈其中的細節。更好地是，語言本身就是設計成能引導你自然而然地寫出可靠且在速度與記憶體使用都十分高效的程式碼。</p>
